plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.5'
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.jy_dev'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '21'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-aop' // srping aop
    implementation 'org.springframework.boot:spring-boot-starter-web' // 웹 어플리케이션 구현
    implementation 'org.springframework.boot:spring-boot-starter-security' // 보안 기능 구현
    implementation "org.springframework.boot:spring-boot-starter-data-jpa"  // JPA를 이용한 데이터 접근
    implementation 'org.springframework.boot:spring-boot-starter-validation' // 검증 기능
    runtimeOnly 'com.mysql:mysql-connector-j'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'

    // 서드파티 라이브러리
    // https://mvnrepository.com/artifact/commons-codec/commons-codec Hex Encode,Decode
    implementation group: 'commons-codec', name: 'commons-codec', version: '1.15'

    implementation group: 'com.auth0', name: 'java-jwt', version: '4.3.0'  // Auth0의 Java JWT 라이브러리
    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.0' // Apache Commons Lang
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-mail', version: '3.0.5' // 메일인증
}

tasks.named('test') {
    useJUnitPlatform()
}
